--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 description = "Macro library for the Dusk Piecrust VM"
 
 [dependencies]
-syn = "2.0.44"
+syn = { version = "2.0.44", features = ["full"] }
 quote = "1.0.34"
-piecrust-uplink = { path = "../piecrust-uplink" }
+piecrust-uplink = "0.9.0"
 
 [lib]
 proc-macro = true
